# LiDARStudio

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  cloud_ops.py  edit_ops.py  install_dependencies.py  lidar_jobs.py  package-lock.json  package.json  process_pointcloud.py  process_splat.py  pyproject.toml  renovate.json  scratch-env.sh  server.py  splat_io.py  threejs_scene.html  viewer.css
.claude/: settings.json
.claude/commands/: client-side-migration.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
GNKinematics/: kinematics.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
js/: collision.js  device.js  lidar.js  main.js  panel.js  scene.js  state.js  stl.js  storage.js  vr.js  websocket.js
src/lidarstudio/: __main__.py  cloud_ops.py  edit_ops.py  lidar_jobs.py  process_mesh.py  process_pointcloud.py  process_sfm.py  process_splat.py  server.py  splat_io.py
tests/: test_cli.py  test_splat_to_cloud.py
